--- a/common-impl/pom.xml
+++ b/common-impl/pom.xml
@@ -28,7 +28,7 @@
     <version>0.5.0-SNAPSHOT</version>
 
     <properties>
-        <common.api.version>0.6.0</common.api.version>
+        <common.api.version>0.7.0</common.api.version>
     </properties>
 
     <dependencies>
@@ -36,6 +36,11 @@
             <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>common-api</artifactId>
             <version>${common.api.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.activation</groupId>
+            <artifactId>javax.activation</artifactId>
         </dependency>
 
         <dependency>
