--- a/bot-sdk/pom.xml
+++ b/bot-sdk/pom.xml
@@ -23,13 +23,13 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.6.0-SNAPSHOT</version>
+        <version>0.6.0</version>
     </parent>
     <artifactId>bot-sdk</artifactId>
-    <version>0.2.1-SNAPSHOT</version>
+    <version>0.2.1</version>
 
     <properties>
-        <client.impl.version>0.5.0-SNAPSHOT</client.impl.version>
+        <client.impl.version>0.5.0</client.impl.version>
     </properties>
 
     <dependencies>
