--- a/jackson-support/pom.xml
+++ b/jackson-support/pom.xml
@@ -22,10 +22,10 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.6.0-SNAPSHOT</version>
+        <version>0.6.0</version>
     </parent>
     <artifactId>jackson-support</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
 
     <properties>
         <common.api.version>0.7.0</common.api.version>
