--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.ma1uta.matrix</groupId>
     <artifactId>jmsdk</artifactId>
-    <version>0.6.0-SNAPSHOT</version>
+    <version>0.6.0</version>
     <packaging>pom</packaging>
     <licenses>
         <license>
@@ -83,21 +83,17 @@
         <maven.toolchain.plugin>1.1</maven.toolchain.plugin>
         <maven.jar.plugin>3.1.0</maven.jar.plugin>
 
-        <asm.version>7.0-beta</asm.version>
+        <asm.version>7.0</asm.version>
         <slf4j.api.version>1.8.0-beta2</slf4j.api.version>
         <javax.ws.rs.api.version>2.1.1</javax.ws.rs.api.version>
         <jackson.annotations.version>2.9.7</jackson.annotations.version>
-        <javax.servlet.api.version>4.0.1</javax.servlet.api.version>
         <hibernate.jpa.api.version>1.0.2.Final</hibernate.jpa.api.version>
         <junit5.bom.version>5.3.1</junit5.bom.version>
-        <jetty.server.version>9.4.12.v20180830</jetty.server.version>
         <jersey.client.version>2.27</jersey.client.version>
-        <jersey.rx.client.version>2.27</jersey.rx.client.version>
+        <jersey.hk2.version>2.27</jersey.hk2.version>
         <jersey.media.json.jackson.version>2.27</jersey.media.json.jackson.version>
         <jackson.jaxrs.json.provider.version>2.9.7</jackson.jaxrs.json.provider.version>
         <jackson.databind.version>2.9.7</jackson.databind.version>
-        <resteasy.client.version>4.0.0.Beta5</resteasy.client.version>
-        <resteasy.undertow.version>4.0.0.Beta5</resteasy.undertow.version>
         <javax.json.bind.api.version>1.0</javax.json.bind.api.version>
         <javax.json.api.version>1.1.3</javax.json.api.version>
         <javax.activation.version>1.2.0</javax.activation.version>
@@ -269,7 +265,14 @@
                             </goals>
                         </execution>
                     </executions>
-                </plugin>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.ow2.asm</groupId>
+                            <artifactId>asm</artifactId>
+                            <version>${asm.version}</version>
+                        </dependency>
+                    </dependencies>
+                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
@@ -353,11 +356,6 @@
                 <version>${jackson.annotations.version}</version>
             </dependency>
             <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>javax.servlet-api</artifactId>
-                <version>${javax.servlet.api.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>com.fasterxml.jackson.jaxrs</groupId>
                 <artifactId>jackson-jaxrs-json-provider</artifactId>
                 <version>${jackson.jaxrs.json.provider.version}</version>
@@ -369,16 +367,14 @@
             </dependency>
 
             <dependency>
-                <groupId>org.jboss.resteasy</groupId>
-                <artifactId>resteasy-client</artifactId>
-                <version>${resteasy.client.version}</version>
-                <scope>test</scope>
+                <groupId>org.glassfish.jersey.core</groupId>
+                <artifactId>jersey-client</artifactId>
+                <version>${jersey.client.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.jboss.resteasy</groupId>
-                <artifactId>resteasy-jackson2-provider</artifactId>
-                <version>${resteasy.client.version}</version>
-                <scope>test</scope>
+                <groupId>org.glassfish.jersey.media</groupId>
+                <artifactId>jersey-media-json-jackson</artifactId>
+                <version>${jersey.media.json.jackson.version}</version>
             </dependency>
 
             <dependency>
@@ -387,11 +383,6 @@
                 <version>${junit5.bom.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.resteasy</groupId>
-                <artifactId>resteasy-undertow</artifactId>
-                <version>${resteasy.undertow.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.json.bind</groupId>
@@ -542,7 +533,6 @@
         <module>bot-sdk</module>
         <module>jackson-support</module>
         <module>jsonb-support</module>
-        <module>client-jaxrs-resteasy</module>
-        <module>client-java11</module>
+        <module>client-jaxrs</module>
     </modules>
 </project>
