--- a/client-jaxrs/pom.xml
+++ b/client-jaxrs/pom.xml
@@ -23,15 +23,17 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.6.0</version>
+        <version>0.6.0-beta1</version>
     </parent>
     <artifactId>client-jaxrs</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.0-beta1</version>
 
     <properties>
-        <client.impl.version>0.5.0</client.impl.version>
+        <client.impl.version>0.5.0-beta1</client.impl.version>
         <jackson.support.version>0.1.0</jackson.support.version>
         <undertow.version>2.0.14.Final</undertow.version>
+        <jackson.core.version>2.9.7</jackson.core.version>
+        <wiremock.version>2.19.0</wiremock.version>
     </properties>
 
     <dependencies>
@@ -48,7 +50,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.9.7</version>
+            <version>${jackson.core.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
@@ -74,7 +76,7 @@
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
             <artifactId>wiremock</artifactId>
-            <version>2.19.0</version>
+            <version>${wiremock.version}</version>
             <scope>test</scope>
         </dependency>
 
