--- a/jackson-support/pom.xml
+++ b/jackson-support/pom.xml
@@ -22,13 +22,13 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.6.0-beta1</version>
+        <version>0.6.0-beta2</version>
     </parent>
     <artifactId>jackson-support</artifactId>
-    <version>0.1.0-beta1</version>
+    <version>0.1.0-beta2</version>
 
     <properties>
-        <common.api.version>0.7.0-beta1</common.api.version>
+        <common.api.version>0.7.0-beta2</common.api.version>
     </properties>
 
     <dependencies>
@@ -38,6 +38,10 @@
             <version>${common.api.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
