--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.ma1uta.matrix</groupId>
     <artifactId>jmsdk</artifactId>
-    <version>0.6.0-beta1</version>
+    <version>0.6.0-beta2</version>
     <packaging>pom</packaging>
     <licenses>
         <license>
@@ -87,6 +87,7 @@
         <slf4j.api.version>1.8.0-beta2</slf4j.api.version>
         <javax.ws.rs.api.version>2.1.1</javax.ws.rs.api.version>
         <jackson.annotations.version>2.9.7</jackson.annotations.version>
+        <jackson.databind.version>2.9.7</jackson.databind.version>
         <hibernate.jpa.api.version>1.0.2.Final</hibernate.jpa.api.version>
         <junit5.bom.version>5.3.1</junit5.bom.version>
         <jersey.client.version>2.27</jersey.client.version>
@@ -395,8 +396,8 @@
                 <version>${javax.json.api.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.sun.activation</groupId>
-                <artifactId>javax.activation</artifactId>
+                <groupId>javax.activation</groupId>
+                <artifactId>javax.activation-api</artifactId>
                 <version>${javax.activation.version}</version>
             </dependency>
         </dependencies>
