--- a/bot-impl/pom.xml
+++ b/bot-impl/pom.xml
@@ -25,7 +25,7 @@
         <artifactId>jmsdk</artifactId>
         <version>0.6.0-beta2</version>
     </parent>
-    <artifactId>bot-sdk</artifactId>
+    <artifactId>bot-impl</artifactId>
     <version>0.3.0-beta2</version>
 
     <properties>
@@ -45,4 +45,17 @@
             <version>${hibernate.jpa.api.version}</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <configuration>
+                    <instructions>
+                        <Automatic-Module-Name>matrix.bot.impl</Automatic-Module-Name>
+                    </instructions>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
