--- a/client-jaxrs/pom.xml
+++ b/client-jaxrs/pom.xml
@@ -30,8 +30,9 @@
 
     <properties>
         <client.impl.version>0.5.0-beta2</client.impl.version>
-        <jackson.support.version>0.1.0</jackson.support.version>
+        <jackson.support.version>0.1.0-beta2</jackson.support.version>
         <undertow.version>2.0.14.Final</undertow.version>
+        <jackson.annotations.version>2.9.7</jackson.annotations.version>
         <jackson.core.version>2.9.7</jackson.core.version>
         <wiremock.version>2.19.0</wiremock.version>
     </properties>
@@ -46,6 +47,11 @@
             <groupId>io.github.ma1uta.matrix</groupId>
             <artifactId>jackson-support</artifactId>
             <version>${jackson.support.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.annotations.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -96,4 +102,17 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <configuration>
+                    <instructions>
+                        <Automatic-Module-Name>matrix.client.jaxrs</Automatic-Module-Name>
+                    </instructions>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
