--- a/client-jaxrs/pom.xml
+++ b/client-jaxrs/pom.xml
@@ -23,18 +23,18 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.6.0-beta2</version>
+        <version>0.6.0</version>
     </parent>
     <artifactId>client-jaxrs</artifactId>
-    <version>0.1.0-beta3</version>
+    <version>0.1.0</version>
 
     <properties>
-        <client.impl.version>0.5.0-beta3</client.impl.version>
-        <jackson.support.version>0.1.0-beta3</jackson.support.version>
+        <client.impl.version>0.5.0</client.impl.version>
+        <jackson.support.version>0.1.0</jackson.support.version>
         <undertow.version>2.0.14.Final</undertow.version>
-        <jackson.annotations.version>2.9.7</jackson.annotations.version>
-        <jackson.core.version>2.9.7</jackson.core.version>
-        <wiremock.version>2.19.0</wiremock.version>
+        <jackson.annotations.version>2.9.8</jackson.annotations.version>
+        <jackson.core.version>2.9.8</jackson.core.version>
+        <wiremock.version>2.20.0</wiremock.version>
     </properties>
 
     <dependencies>
