--- a/jsonb-support/pom.xml
+++ b/jsonb-support/pom.xml
@@ -22,14 +22,14 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.6.0-beta2</version>
+        <version>0.6.0</version>
     </parent>
     <artifactId>jsonb-support</artifactId>
-    <version>0.1.0-beta3</version>
+    <version>0.1.0</version>
 
     <properties>
-        <common.api.version>0.7.0-beta3</common.api.version>
-        <javax.json.version>1.1.3</javax.json.version>
+        <common.api.version>0.7.0</common.api.version>
+        <javax.json.version>1.1.4</javax.json.version>
         <yasson.version>1.0.2</yasson.version>
     </properties>
 
