--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.ma1uta.matrix</groupId>
     <artifactId>jmsdk</artifactId>
-    <version>0.6.0-beta2</version>
+    <version>0.6.0</version>
     <packaging>pom</packaging>
     <licenses>
         <license>
@@ -83,20 +83,20 @@
         <buildnumber.maven.plugin.version>1.3</buildnumber.maven.plugin.version>
 
         <!-- plugin dependencies -->
-        <checkstyle.version>8.14</checkstyle.version>
+        <checkstyle.version>8.16</checkstyle.version>
         <asm.version>7.0</asm.version>
 
         <!-- dependencies -->
         <slf4j.api.version>1.8.0-beta2</slf4j.api.version>
-        <jackson.databind.version>2.9.7</jackson.databind.version>
+        <jackson.databind.version>2.9.8</jackson.databind.version>
         <hibernate.jpa.api.version>1.0.2.Final</hibernate.jpa.api.version>
         <junit5.bom.version>5.3.1</junit5.bom.version>
         <jersey.client.version>2.27</jersey.client.version>
         <jersey.hk2.version>2.27</jersey.hk2.version>
         <jersey.media.json.jackson.version>2.27</jersey.media.json.jackson.version>
-        <jackson.jaxrs.json.provider.version>2.9.7</jackson.jaxrs.json.provider.version>
+        <jackson.jaxrs.json.provider.version>2.9.8</jackson.jaxrs.json.provider.version>
         <javax.json.bind.api.version>1.0</javax.json.bind.api.version>
-        <javax.json.api.version>1.1.3</javax.json.api.version>
+        <javax.json.api.version>1.1.4</javax.json.api.version>
 
         <!-- compatibility -->
         <javax.activation.version>1.2.0</javax.activation.version>
