--- a/client-impl/pom.xml
+++ b/client-impl/pom.xml
@@ -23,14 +23,14 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.6.0</version>
+        <version>0.7.0-SNAPSHOT</version>
     </parent>
     <artifactId>client-impl</artifactId>
-    <version>0.5.0</version>
+    <version>0.6.0-SNAPSHOT</version>
 
     <properties>
-        <client.api.version>r0.4.0-3</client.api.version>
-        <common.impl.version>0.5.0</common.impl.version>
+        <client.api.version>r0.4.0-4-SNAPSHOT</client.api.version>
+        <common.impl.version>0.6.0-SNAPSHOT</common.impl.version>
     </properties>
 
     <dependencies>
