--- a/client-jaxrs/pom.xml
+++ b/client-jaxrs/pom.xml
@@ -23,14 +23,14 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.6.0</version>
+        <version>0.7.0-SNAPSHOT</version>
     </parent>
     <artifactId>client-jaxrs</artifactId>
-    <version>0.1.0</version>
+    <version>0.2.0-SNAPSHOT</version>
 
     <properties>
-        <client.impl.version>0.5.0</client.impl.version>
-        <jackson.support.version>0.1.0</jackson.support.version>
+        <client.impl.version>0.6.0-SNAPSHOT</client.impl.version>
+        <jackson.support.version>0.2.0-SNAPSHOT</jackson.support.version>
         <undertow.version>2.0.14.Final</undertow.version>
         <jackson.annotations.version>2.9.8</jackson.annotations.version>
         <jackson.core.version>2.9.8</jackson.core.version>
