--- a/common-impl/pom.xml
+++ b/common-impl/pom.xml
@@ -22,13 +22,13 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.6.0</version>
+        <version>0.7.0-SNAPSHOT</version>
     </parent>
     <artifactId>common-impl</artifactId>
-    <version>0.5.0</version>
+    <version>0.6.0-SNAPSHOT</version>
 
     <properties>
-        <common.api.version>0.7.0</common.api.version>
+        <common.api.version>0.8.0-SNAPSHOT</common.api.version>
     </properties>
 
     <dependencies>
