--- a/client-jaxrs/pom.xml
+++ b/client-jaxrs/pom.xml
@@ -23,18 +23,18 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.7.0-SNAPSHOT</version>
+        <version>0.7.0-rc1</version>
     </parent>
     <artifactId>client-jaxrs</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.2.0-rc1</version>
 
     <properties>
-        <client.impl.version>0.6.0-SNAPSHOT</client.impl.version>
-        <jackson.support.version>0.2.0-SNAPSHOT</jackson.support.version>
+        <client.impl.version>0.6.0-rc1</client.impl.version>
+        <jackson.support.version>0.2.0-rc1</jackson.support.version>
         <undertow.version>2.0.14.Final</undertow.version>
         <jackson.annotations.version>2.9.8</jackson.annotations.version>
         <jackson.core.version>2.9.8</jackson.core.version>
-        <wiremock.version>2.20.0</wiremock.version>
+        <wiremock.version>2.21.0</w2iremock.version>
     </properties>
 
     <dependencies>
