--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.ma1uta.matrix</groupId>
     <artifactId>jmsdk</artifactId>
-    <version>0.7.0-SNAPSHOT</version>
+    <version>0.7.0-rc1</version>
     <packaging>pom</packaging>
     <licenses>
         <license>
@@ -79,21 +79,22 @@
         <maven.site.plugin.version>3.7.1</maven.site.plugin.version>
         <maven.project.info.plugin.version>3.0.0</maven.project.info.plugin.version>
         <maven.jar.plugin.version>3.1.0</maven.jar.plugin.version>
-        <maven.bundle.plugin.version>3.3.0</maven.bundle.plugin.version>
-        <buildnumber.maven.plugin.version>1.3</buildnumber.maven.plugin.version>
+        <maven.bundle.plugin.version>4.1.0</maven.bundle.plugin.version>
+        <buildnumber.maven.plugin.version>1.4</buildnumber.maven.plugin.version>
+        <maven.enforcer.plugin.version>3.0.0-M2</maven.enforcer.plugin.version>
 
         <!-- plugin dependencies -->
-        <checkstyle.version>8.16</checkstyle.version>
-        <asm.version>7.0</asm.version>
+        <checkstyle.version>8.18</checkstyle.version>
+        <asm.version>7.1</asm.version>
 
         <!-- dependencies -->
-        <slf4j.api.version>1.8.0-beta2</slf4j.api.version>
+        <slf4j.api.version>1.8.0-beta4</slf4j.api.version>
         <jackson.databind.version>2.9.8</jackson.databind.version>
         <hibernate.jpa.api.version>1.0.2.Final</hibernate.jpa.api.version>
-        <junit5.bom.version>5.3.1</junit5.bom.version>
-        <jersey.client.version>2.27</jersey.client.version>
-        <jersey.hk2.version>2.27</jersey.hk2.version>
-        <jersey.media.json.jackson.version>2.27</jersey.media.json.jackson.version>
+        <junit5.bom.version>5.4.0</junit5.bom.version>
+        <jersey.client.version>2.28</jersey.client.version>
+        <jersey.hk2.version>2.28</jersey.hk2.version>
+        <jersey.media.json.jackson.version>2.28</jersey.media.json.jackson.version>
         <jackson.jaxrs.json.provider.version>2.9.8</jackson.jaxrs.json.provider.version>
         <javax.json.bind.api.version>1.0</javax.json.bind.api.version>
         <javax.json.api.version>1.1.4</javax.json.api.version>
@@ -167,17 +168,21 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>${maven.enforcer.plugin.version}</version>
                     <executions>
                         <execution>
-                            <id>enforce</id>
-                            <configuration>
-                                <rules>
-                                    <DependencyConvergence/>
-                                </rules>
-                            </configuration>
+                            <id>enforce-maven</id>
                             <goals>
                                 <goal>enforce</goal>
                             </goals>
+                            <configuration>
+                                <rules>
+                                    <requireMavenVersion>
+                                        <version>3.6.0</version>
+                                    </requireMavenVersion>
+                                    <DependencyConvergence/>
+                                </rules>
+                            </configuration>
                         </execution>
                     </executions>
                 </plugin>
