--- a/bot-impl/pom.xml
+++ b/bot-impl/pom.xml
@@ -23,13 +23,13 @@
     <parent>
         <groupId>io.github.ma1uta.matrix</groupId>
         <artifactId>jmsdk</artifactId>
-        <version>0.7.0-rc1</version>
+        <version>0.7.0-SNAPSHOT</version>
     </parent>
     <artifactId>bot-impl</artifactId>
-    <version>0.4.0-rc1</version>
+    <version>0.4.0-SNAPSHOT</version>
 
     <properties>
-        <client.impl.version>0.6.0-rc1</client.impl.version>
+        <client.impl.version>0.6.0-SNAPSHOT</client.impl.version>
     </properties>
 
     <dependencies>
